Central property read and using it in classes

--- a/SoapLayer/src/main/resources/config.properties
+++ b/SoapLayer/src/main/resources/config.properties
@@ -1,2 +1,7 @@
 #Platform
-health_url=http://{hostname}:{port}/home/system/app/mp/health/ready
+health_url=http://{hostname}:{port}/home/{organization}/app/mp/health/ready
+gateway_url=http://{hostname}:{port}/home/{organization}/com.eibus.web.soap.Gateway.wcp
+otds_url=http://{hostname}:{port}/otdsws/rest/authentication/credentials
+username={username}
+password={password}
+targetResourceI={otds_resource_id}
