Solving sonarlint issues

--- a/SoapLayer/src/main/resources/config.properties
+++ b/SoapLayer/src/main/resources/config.properties
@@ -4,4 +4,4 @@ gateway_url=http://{hostname}:{port}/home/{organization}/com.eibus.web.soap.Gate
 otds_url=http://{hostname}:{port}/otdsws/rest/authentication/credentials
 username={username}
 password={password}
-targetResourceI={otds_resource_id}
+targetResourceId={otds_resource_id}
